# kurento-modules

./: .gitignore  Dockerfile  SdpEndpoint.conf.json
file-to-rtsp-module/: CMakeLists.txt  auto_build  config.h.cmake
file-to-rtsp-module/src/gst-plugins/: CMakeLists.txt  filetortspendpoint.c  gstfiletortspendpoint.cpp  gstfiletortspendpoint.h
file-to-rtsp-module/src/server/implementation/objects/: FileToRtspEndpointImpl.cpp  FileToRtspEndpointImpl.hpp
file-to-rtsp-module/src/server/interface/: filetortspendpoint.FileToRtspEndpoint.kmd.json  filetortspendpoint.kmd.json
rtmp-to-rtsp-module/: CMakeLists.txt  auto_build  config.h.cmake
rtmp-to-rtsp-module/src/gst-plugins/: CMakeLists.txt  gstrtmptortspendpoint.cpp  gstrtmptortspendpoint.h  rtmptortspendpoint.c
rtmp-to-rtsp-module/src/server/implementation/objects/: RtmpToRtspEndpointImpl.cpp  RtmpToRtspEndpointImpl.hpp
rtmp-to-rtsp-module/src/server/interface/: rtmptortspendpoint.RtmpToRtspEndpoint.kmd.json  rtmptortspendpoint.kmd.json
rtsp-to-rtp-module/: CMakeLists.txt  auto_build  auto_build_old  config.h.cmake
rtsp-to-rtp-module/src/gst-plugins/: CMakeLists.txt  gstrtsptortpendpoint.cpp  gstrtsptortpendpoint.h  rtsptortpendpoint.c
rtsp-to-rtp-module/src/server/implementation/objects/: RtspToRtpEndpointImpl.cpp  RtspToRtpEndpointImpl.hpp
rtsp-to-rtp-module/src/server/interface/: rtsptortpendpoint.RtspToRtpEndpoint.kmd.json  rtsptortpendpoint.kmd.json
rtsp-to-rtsp-module/: CMakeLists.txt  auto_build  config.h.cmake
rtsp-to-rtsp-module/src/gst-plugins/: CMakeLists.txt  gstrtsptortspendpoint.cpp  gstrtsptortspendpoint.h  rtsptortspendpoint.c
rtsp-to-rtsp-module/src/server/implementation/objects/: RtspToRtspEndpointImpl.cpp  RtspToRtspEndpointImpl.hpp
rtsp-to-rtsp-module/src/server/interface/: rtsptortspendpoint.RtspToRtspEndpoint.kmd.json  rtsptortspendpoint.kmd.json
